# ocrlocal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ocrlocal/: __init__.py  cli.py  doctor.py  errors.py  ocr.py
tests/: conftest.py  test_cli.py  test_doctor.py  test_integration.py  test_ocr.py
