[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocrlocal"
version = "0.1.0"
description = "Dead-simple offline OCR for developers. No cloud. No API keys."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AshSgDe29071999" },
]
keywords = ["ocr", "tesseract", "offline", "cli", "image-to-text", "pytesseract"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pillow>=9.0.0",
    "pytesseract>=0.3.10",
    "typer>=0.12.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/AshSgDe29071999/ocrlocal"
Repository = "https://github.com/AshSgDe29071999/ocrlocal"
Issues = "https://github.com/AshSgDe29071999/ocrlocal/issues"
Documentation = "https://github.com/AshSgDe29071999/ocrlocal#readme"

[project.scripts]
ocrlocal = "ocrlocal.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ocrlocal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
